argocd/manifests/semaphore/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: semaphore
  labels:
    app.kubernetes.io/name: semaphore
    app.kubernetes.io/managed-by: argocd
