argocd/manifests/semaphore/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: semaphore
  namespace: semaphore
  labels:
    app: semaphore
    app.kubernetes.io/name: semaphore
spec:
  selector:
    app: semaphore
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
